Aula dia 30/11. Com Login e cadastro de usuario (Salvando no Banco)

--- a/Financeiro/src/main/webapp/pages/public/financeiro.xhtml
+++ b/Financeiro/src/main/webapp/pages/public/financeiro.xhtml
@@ -92,6 +92,12 @@
 				<f:facet name="header">Salario que Restou</f:facet>
 				<h:outputText value="#{usu.resultado}"></h:outputText>
 			</p:column>
+			
+			<p:column>
+				<f:facet name="header">username</f:facet>
+				<h:outputText value="#{usu.username}"></h:outputText>
+			</p:column>
+			
 
 			<p:column rendered="#{usuarioBean.isUserInRole('ADMIN')}">
 				<f:facet name="header">Opções</f:facet>
