--- a/Financeiro/src/main/webapp/pages/public/financeiro.xhtml
+++ b/Financeiro/src/main/webapp/pages/public/financeiro.xhtml
@@ -107,8 +107,11 @@
 					action="#{usuarioBean.editar(entidade.id)}"></p:commandButton>
 			</p:column>
 			
+			
 		</p:dataTable>
-	
+	<p:linkButton outcome="renda.xhtml" value="Bookmark">
+    <f:param name="productId" value="10" />
+</p:linkButton>
 		
  
 	
